--- a/functions/views/index.hbs
+++ b/functions/views/index.hbs
@@ -1,6 +1,6 @@
 <html>
     <body>
-      <h1>{{db_result.Heading}}</h1>
+      <h1>{{db_result.name}}</h1>
 
       <form action="/insert_data" method="post" >
      <fieldset>
